Bug 1578282 - Use flattened tree parent when getting inserted node container. r=Jamie a=lizzard

This assures that a node that has already been inserted in a shadow root
subtree does not get erroneously reinserted into the top container.

Differential Revision: https://phabricator.services.mozilla.com/D44880